Implemented subscribers removing logic for apiary
