# docs/swagger.yaml
@@ -35,7 +35,7 @@ info:
   title: BeesBuddy worker
   version: "1.0"
 paths:
-  /settings/subscribers:
+  /preferences/subscribers:
     get:
       description: Get subscribers
       produces:
@@ -60,7 +60,7 @@ paths:
       - ApiKeyAuth: []
       summary: Get active subscribers
       tags:
-      - settings
+      - preferences
     post:
       description: Create a subscriber
       parameters:
@@ -92,7 +92,39 @@ paths:
       - ApiKeyAuth: []
       summary: Create a new subscriber
       tags:
-      - settings
+      - preferences
+  /preferences/subscribers/{apiary_id}:
+    delete:
+      description: Create a subscriber
+      parameters:
+      - description: Apiary Id
+        in: path
+        name: apiary_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/dto.ResponseHTTP'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dto.SubscriberOutput'
+                  type: array
+              type: object
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/dto.ResponseHTTP'
+      security:
+      - ApiKeyAuth: []
+      summary: Create a new subscriber
+      tags:
+      - preferences
 securityDefinitions:
   ApiKeyAuth:
     in: header
